--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -19,12 +19,8 @@ steps:
   displayName: 'Run a multi-line script'
 
 - task: Docker@2
-  displayName: Build and push image to container registry
   inputs:
-    command: buildAndPush
-    repository: apicontagem-azuredevops
-    dockerfile: '**/dockerfile'
-    containerRegistry: grofferegistry
-    tags: |
-      $(Build.BuildId)
-      latest
+    containerRegistry: 'grofferegistry'
+    repository: 'apicontagem-azuredevops'
+    command: 'buildAndPush'
+    Dockerfile: '**/Dockerfile'
